# led-sync-panel

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  build.py  build_report.py  index.html  report.html
assets/devices/: README.md
assets/recordings/: README.md
decode/: README.md  decode_video.py  two_camera_offset.py
firmware/blink/: .gitignore  CMakeLists.txt  README.md  main.c
firmware/panel8/: CMakeLists.txt  README.md  main.c
firmware/rpi5_timecode/: Makefile  README.md  SETUP_GUIDE.md  blink.c  main.c
firmware/timecode/: CMakeLists.txt  README.md  flash.sh  main.c
references/: how-to-use-a-breadboard.md
sim/: .gitignore  README.md  decode_sim.py  requirements.txt
sim/ledsync/: camera.py  codec.py  offset.py  panel.py  render.py
sim/tests/: test_camera.py  test_codec.py  test_offset.py  test_panel.py  test_render.py
